--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html> -
+<!doctype html>
 <html class="no-js" lang="">
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
